Adding more detail about modules from page 1 of google drive notes.

--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "f1283d27",
    "metadata": {},
    "outputs": [
@@ -708,15 +708,14 @@
     "%%writefile ts-project/default-export-import.ts\n",
     "\n",
     "// Default is the only one you can drop the {} around.\n",
-    "import message from './importable6';\n",
-    "import {MyClass} from './importable6';\n",
+    "import message, {MyClass} from './importable6';\n",
     "\n",
     "console.log(message);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "id": "26cf53e3",
    "metadata": {},
    "outputs": [
@@ -724,8 +723,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: /home/davidpet/miniconda3/envs/ai/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "hi\n"
+      "hi\r\n"
      ]
     }
    ],
@@ -1144,9 +1142,315 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a17479d5",
+   "metadata": {},
+   "source": [
+    "# Bare Imports\n",
+    "\n",
+    "You can import a file without any symbols to run it for side effects.  An example of a library that uses this is __New Relic__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d3090ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-project/bare.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-project/bare.ts\n",
+    "\n",
+    "import './importable7'; // no symbols imported, but the code runs\n",
+    "// console output from top-level file runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "529a8edc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['importing 7']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!!ts-node ts-project/bare.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a538679e",
+   "metadata": {},
+   "source": [
+    "# Hoisting of Imports\n",
+    "\n",
+    "Supposedly, imports are hoisted, so in the below code, 'importing 7' should run first before 'hi' and '0'.\n",
+    "\n",
+    "For some reason, that is not happening, so based on this example alone, you shouldn't rely on that behavior. Maybe there's a setting in tsconfig for it or something.  It may be because I'm running with `ts-node` instead of a framework."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c10c5754",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-project/hoisting.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-project/hoisting.ts\n",
+    "\n",
+    "import x from './importable6';\n",
+    "console.log(x); // hi\n",
+    "//console.log(theX);\n",
+    "\n",
+    "import {x as theX} from './importable7'; // importing 7 (if hoisted, this should output first)\n",
+    "console.log(theX); // 0\n",
+    "\n",
+    "export { x as x}; // just here to make sure it's interpretted as a module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1ee9f0af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hi', 'importing 7', '0']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!!ts-node ts-project/hoisting.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d30483",
+   "metadata": {},
+   "source": [
+    "# Dynamic Imports\n",
+    "\n",
+    "The `import` statement can be made __asynchronous__ by setting it to a variable.  This will __never be hoisted__.\n",
+    "\n",
+    "The resulting `Promise` returns an object that has a field for each export, plus a `default` field for the default export."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e2ceddef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-project/dynamic.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-project/dynamic.ts\n",
+    "\n",
+    "console.log('start');\n",
+    "\n",
+    "const p = import('./importable7');\n",
+    "p.then(r => console.log(r.x)); // 0 (named export)\n",
+    "\n",
+    "async function f() {\n",
+    "    const s = await import('./importable6');\n",
+    "    console.log(s.default); // hi (default export)\n",
+    "}\n",
+    "f();\n",
+    "\n",
+    "console.log('done'); // this runs before any promises resolve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c593188f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['start', 'done', 'importing 7', '0', 'hi']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!!ts-node ts-project/dynamic.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "103eea4b",
+   "metadata": {},
+   "source": [
+    "# require()\n",
+    "\n",
+    "This was the old __Node-style import__, but now Node uses `Import` instead.\n",
+    "\n",
+    "You can think of it as working the same way as __dynamic imports__ above except it is __synchronous__.\n",
+    "\n",
+    "```JavaScript\n",
+    "const l = require('./someimport'); // l will have 'default' and named fields like above`\n",
+    "```\n",
+    "\n",
+    "Note that you are allowed to use `require` even when ES6 modules are in use - thus allowing you to use libraries that use the old system and don't play nicely with the new one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3650880f",
+   "metadata": {},
+   "source": [
+    "# Node-style Exports\n",
+    "\n",
+    "Back when `require` was how you imported, exporting was done via `module.exports` (a global node variable).\n",
+    "\n",
+    "```JavaScript\n",
+    "exports.x = 100; // the object returned by require() will have a field x\n",
+    "module.exports.y = 200; // exports is an alias for module.exports\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d83975cc",
+   "metadata": {},
+   "source": [
+    "# Index File\n",
+    "\n",
+    "Putting an `index.ts` or `index.js` file in a folder makes the folder importable as a module, similar to Python's `__init__.py`.  The index file can import other files in the folder by relative path and export what it wants. Importing the module runs the `index.ts` or `index.js` file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5a8c4995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-project/package/otherfile.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-project/package/otherfile.ts\n",
+    "\n",
+    "export default let x = 100;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9ec610ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-project/package/index.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-project/package/index.ts\n",
+    "\n",
+    "import x from './otherfile';\n",
+    "\n",
+    "export default function MyComponent() {\n",
+    "    console.log('component rendered');\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "025867d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-project/indexfile.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-project/indexfile.ts\n",
+    "\n",
+    "import MyComponent from './package';\n",
+    "\n",
+    "MyComponent();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "fcda5f4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['component rendered']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "!!ts-node ts-project/indexfile.ts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e19ece07",
+   "id": "21c5b080",
    "metadata": {},
    "outputs": [],
    "source": []
