Adding notes from page 3 of JavaScript google doc notes.

--- a/javascript/DOM Manipulation.ipynb
+++ b/javascript/DOM Manipulation.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3730f320",
+   "metadata": {},
+   "source": [
+    "# What Goes In Here Instead of TypeScript?\n",
+    "\n",
+    "Any examples that require running JS against real HTML, since TypeScript cells can't do that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b3367bc",
    "metadata": {},
    "source": [
@@ -126,6 +136,98 @@
     "    <div id=\"existing-div-id\">Div2</div>\n",
     "    <div>Div3</div>\n",
     "</body>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "849d964d",
+   "metadata": {},
+   "source": [
+    "# Image Preloading\n",
+    "\n",
+    "- you can create an image with `new Image()` or `document.createElement('img')` and set its `src` attribute to start an __asynchronous load__ of the image in the background\n",
+    "- you can use that image directly in the DOM if you want, but you don't have to\n",
+    "  - mounting it to the DOM is slow\n",
+    "  - either way, when the image finishes loading, the __browser cache__ will contain the image (keyed by __url__)\n",
+    "- if you create another image with that same url, it will __get it from the cache__ instead of loading it again\n",
+    "  - could even be an `<img>` that stays around and keeps changing src or something like that\n",
+    "- specifying `width` and/or `height` in the `Image()` constructor or in the `HTMLImageElement` properties creates a local transformation (which may slow down the render)\n",
+    "  - it does not affect the cached data\n",
+    "- if you want to cache a transformed version, use a __CDN__ where you can specify query params to get different __prerendered sizes__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "76a6b5b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "<span>Hi</span>\n",
+       "</div>\n",
+       "\n",
+       "<script>\n",
+       "(() => {\n",
+       "    // these two are equivalent\n",
+       "    const image1 = new Image();\n",
+       "    const image2 = document.createElement('img');\n",
+       "    console.log(image1 instanceof HTMLImageElement); // true\n",
+       "    console.log(image2 instanceof HTMLImageElement); // true\n",
+       "    \n",
+       "    // async image loading\n",
+       "    image1.src = 'https://en.wikipedia.org/wiki/Main_Page#/media/File:Dorney_Park_Steel_Force_Thunderhawk.jpg';\n",
+       "    console.log('started loading image');\n",
+       "    document.querySelector('div').appendChild(image1); // doesn't display in jupyter\n",
+       "    \n",
+       "    // image caching (if image1 finished loading before this, the file would be cached already)\n",
+       "    image2.src = 'https://en.wikipedia.org/wiki/Main_Page#/media/File:Dorney_Park_Steel_Force_Thunderhawk.jpg';\n",
+       "    \n",
+       "    // resizing (no effect on cache)\n",
+       "    new Image(300, 200);\n",
+       "    image2.width = 300;\n",
+       "})();\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<div>\n",
+    "<span>Hi</span>\n",
+    "</div>\n",
+    "\n",
+    "<script>\n",
+    "(() => {\n",
+    "    // these two are equivalent\n",
+    "    const image1 = new Image();\n",
+    "    const image2 = document.createElement('img');\n",
+    "    console.log(image1 instanceof HTMLImageElement); // true\n",
+    "    console.log(image2 instanceof HTMLImageElement); // true\n",
+    "    \n",
+    "    // async image loading\n",
+    "    image1.src = 'https://en.wikipedia.org/wiki/Main_Page#/media/File:Dorney_Park_Steel_Force_Thunderhawk.jpg';\n",
+    "    console.log('started loading image');\n",
+    "    document.querySelector('div').appendChild(image1); // doesn't display in jupyter\n",
+    "    \n",
+    "    // image caching (if image1 finished loading before this, the file would be cached already)\n",
+    "    image2.src = 'https://en.wikipedia.org/wiki/Main_Page#/media/File:Dorney_Park_Steel_Force_Thunderhawk.jpg';\n",
+    "    \n",
+    "    // resizing (no effect on cache)\n",
+    "    new Image(300, 200);\n",
+    "    image2.width = 300;\n",
+    "})();\n",
+    "</script>"
    ]
   },
   {
