--- a/typescript/Control Flow.ipynb
+++ b/typescript/Control Flow.ipynb
@@ -693,9 +693,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "148f23c1",
+   "metadata": {},
+   "source": [
+    "# Boolean Control Flow\n",
+    "\n",
+    "This kind of thing is very useful in frameworks like __React__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "99dd8e1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n",
+      "0\n",
+      "undefined\n",
+      "ran g\n",
+      "undefined\n",
+      "false\n",
+      "\n",
+      "ran g\n",
+      "oy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const b = true;\n",
+    "    const f = () => true;\n",
+    "    const g = () => {console.log('ran g')};   // void fn implicitly returns undefined\n",
+    "    \n",
+    "    // normal boolean short-circuiting\n",
+    "    console.log(b && f()); // true - no surprise here\n",
+    "    console.log(false && b && f()); // false - also no surprise\n",
+    "    console.log(b && f() && 0); // 0 - because last thing seen is falsey\n",
+    "    console.log(b && undefined); // undefined\n",
+    "    console.log(b && g()); // ran g, undefined\n",
+    "    console.log(false && g()); // false\n",
+    "    console.log();\n",
+    "    \n",
+    "    // statements instead of expressions\n",
+    "    b && f() && g(); // will run g()\n",
+    "    false && g();  // will not run g()\n",
+    "    false && console.log('yo'); // does not print\n",
+    "    true && console.log('oy'); // prints (last statement only runs if all others pass)\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df37682d",
+   "id": "3127d8d9",
    "metadata": {},
    "outputs": [],
    "source": []
