--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -1448,9 +1448,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11319e6c",
+   "metadata": {},
+   "source": [
+    "# Triple-Slash Directive\n",
+    "\n",
+    "```JavaScript\n",
+    "/// <reference types=\"cypress\" />\n",
+    "```\n",
+    "\n",
+    "This is a way to import types for Intellisense and the compiler without actually importing.\n",
+    "\n",
+    "It's not a good practice, but you may see it in places (eg. with Cypress tests)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c5b080",
+   "id": "fca87bd8",
    "metadata": {},
    "outputs": [],
    "source": []
