Adding notes from page 4 of JS google doc notes.

--- a/typescript/Setup.ipynb
+++ b/typescript/Setup.ipynb
@@ -361,9 +361,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17043b68",
+   "metadata": {},
+   "source": [
+    "# Polyfills\n",
+    "\n",
+    "- When building from TS to JS, you target a version for purposes of __syntax__\n",
+    "- building from TS to JS (old version) does not add newer data structures that weren't there\n",
+    "- to add newer __functions, types, and data structures__ to old JS/browsers, you use __polyfills__\n",
+    "  - eg. might detect whether `window.Map` exists and if not, define its own\n",
+    "- polyfills are not provided by TypeScript itself, but there are __libraries__:\n",
+    "  - `core-js` lets you import the polyfills you need\n",
+    "  - `Babel` replaces `tsc` and adds polyfills at build time\n",
+    "- polyfills should be __peer dependencies__ in libraries\n",
+    "  - main application should determine which specific polyfills to use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77267604",
+   "id": "c8efd6ad",
    "metadata": {},
    "outputs": [],
    "source": []
