--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -521,6 +521,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad52caa4",
+   "metadata": {},
+   "source": [
+    "# Promise errors\n",
+    "\n",
+    "If you don't `catch` an error from a promise, then it will become an __exception__.  If you use `await`, then catching the exception is the only way.\n",
+    "\n",
+    "Don't forget that even `fetch()` and `response.json()` can technically throw."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c24e69f",
    "metadata": {},
    "source": [
@@ -777,6 +789,55 @@
     "    for (let i = 0; i < 100; i++) {\n",
     "        setTimeout(() => console.log(i));\n",
     "    }\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbca04c6",
+   "metadata": {},
+   "source": [
+    "# clearTimeout\n",
+    "\n",
+    "`setTimeout()` actually returns an object which can be passed to `clearTimeout` to cancel it, whether or not there is a delay."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c0970e0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const timeout = setTimeout(() => console.log('done!'), 10000); // log in 10 seconds\n",
+    "    const timeout2 = setTimeout(() => console.log('done - no delay!')); // log right away\n",
+    "    \n",
+    "    clearTimeout(timeout); // nevermind\n",
+    "    clearTimeout(timeout2); // nevermind\n",
+    "    \n",
+    "    clearTimeout(timeout); // duplicate not an issue\n",
+    "    clearTimeout(0); // non-existent not an issue\n",
+    "    \n",
+    "    console.log('done'); // the only thing that will print\n",
     "})();"
    ]
   },
@@ -1282,6 +1343,18 @@
     "- other event handlers like click handlers, etc. could potentially fire before those events fire\n",
     "  - eg. the browser is showing part of the DOM before it's loaded, and it has a button the user clicks\n",
     "  - you could prevent that by setting your event listeners in the handler for `DOMContentLoaded` or something similar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad08e1cb",
+   "metadata": {},
+   "source": [
+    "# Hydration\n",
+    "\n",
+    "Hydration in web development means taking static HTML from the server and adding handlers, etc. to it to make it a part of the running web application.\n",
+    "\n",
+    "This is used in the context of __server-side rendering__ where static HTML is sent to load faster."
    ]
   },
   {
