--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "7c008649",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,9 @@
       " \"b\": 2,\n",
       " \"a\": 1\n",
       "}\n",
-      "{ a: 1, b: 2, c: 3 }\n"
+      "{ a: 1, b: 2, c: 3 }\n",
+      "{\"a\":1,\"c\":{}}\n",
+      "{\"a\":1,\"c\":{}}\n"
      ]
     },
     {
@@ -1082,7 +1084,7 @@
        "undefined"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,6 +1107,14 @@
     "    \n",
     "    const o2 = JSON.parse(s2);\n",
     "    console.log(o2);\n",
+    "    \n",
+    "    const o3 = {a: 1, b: undefined, c: {}}; // \"b\" is not included even though it's here (because undefined)\n",
+    "    const s5 = JSON.stringify(o3);\n",
+    "    console.log(s5);\n",
+    "    \n",
+    "    const o4 = {a: 1, b: false ? 1 : undefined, c: {}}; // can use undefined to merge without including empty\n",
+    "    const s6 = JSON.stringify(o4);\n",
+    "    console.log(s6);\n",
     "})();"
    ]
   },
@@ -1335,7 +1345,7 @@
    "source": [
     "# DOM Loading Events\n",
     "\n",
-    "- `document` has `DOMContentLoaded` event that fires when the HTML structure (DOM) is in-place, but before styles, etc. are loaded\n",
+    "- `document` has `DOMContentLoaded` event that fires when the HTML structure (DOM) is in-place, but before styles, images, etc. are loaded\n",
     "  - you can use that to guard operations that shouldn't happen until the DOM is fully loaded\n",
     "    - or to modify the DOM once it's there\n",
     "- `window` has `load` event that fires when everything is fully loaded after that\n",
@@ -1343,6 +1353,37 @@
     "- other event handlers like click handlers, etc. could potentially fire before those events fire\n",
     "  - eg. the browser is showing part of the DOM before it's loaded, and it has a button the user clicks\n",
     "  - you could prevent that by setting your event listeners in the handler for `DOMContentLoaded` or something similar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fb3b926",
+   "metadata": {},
+   "source": [
+    "# Event Names/Handlers\n",
+    "\n",
+    "- inline handlers tend to use all lowercase (but aren't case sensitive in HTML): `<div onclick=\"alert()\"></div>`\n",
+    "- when a string for a built-in event (such as with `dispatchEvent()` or `new Event()`), use all lowercase without 'on': `\"animationstart\"`\n",
+    "- for your own __custom event__, make sure __casing matches__ how you defined it\n",
+    "- frameworks may change the expected casing - for instance React forces you to use : `onClick={fn}`\n",
+    "  - JS attributes tend to look like this too, which is where React gets it from"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f5aa75c",
+   "metadata": {},
+   "source": [
+    "# Some Useful Events to Know\n",
+    "\n",
+    "- `click`\n",
+    "- `mouse*`\n",
+    "- `key*`\n",
+    "- `touch*`\n",
+    "- `drag*`\n",
+    "- `DOMContentLoaded`\n",
+    "- `submit`/`change`/`focus`/`blur`/`input`\n",
+    "- `animationstart`/`animationcancel`/`animationend`"
    ]
   },
   {
