Adding items from pages 6-7 of JavaScript google doc.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1568,9 +1568,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08e9a4ee",
+   "metadata": {},
+   "source": [
+    "# IntersectionObserver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f201df3",
+   "metadata": {},
+   "source": [
+    "An `IntersectionObserver` lets you track how an element is __overlapping__ one if its __ancestors__ or the whole __viewport__.\n",
+    "\n",
+    "```JavaScript\n",
+    "const callback = (entries, observer) => {\n",
+    "    // entries are threshold-crossing events that have happened since the last callback\n",
+    "    // could be either multiple thresholds crossed or multiple targets crossing\n",
+    "    // you can probably ignore the 2nd param most of the time (and just use a 1-arg lambda)\n",
+    "};\n",
+    "\n",
+    "// triggered when crossing 50% threshold\n",
+    "// (you could pass an array instead to track multiple at same time)\n",
+    "// (0 is triggered every time hit zero)\n",
+    "// root must be an ancestor of target (not yet specified)\n",
+    "// if not specified, the viewport is used\n",
+    "const observer = new IntersectionObserver(callback, {threshold: 0.5, root: element});\n",
+    "\n",
+    "// observe one or more targets underneath the root (or viewport)\n",
+    "// callback is fired in both directions (going above or below threshold)\n",
+    "// (and 1 initial time at the beginning)\n",
+    "observer.observe(target1);\n",
+    "observer.observe(target2);\n",
+    "\n",
+    "// stop observing a single target\n",
+    "observer.unobserve(target1);\n",
+    "// stop observing all targets\n",
+    "observer.disconnect();\n",
+    "```\n",
+    "\n",
+    "Example Usage: track 50% in view to start a timer and then stop the timer if it goes back below 50% within a certain amount of time.  If it makes it to the end, generate a GA event.\n",
+    "\n",
+    "__HINT__: `react-intersection-observer` library has `useInView()` hook that makes this very easy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c4a6edb",
+   "metadata": {},
+   "source": [
+    "# Proxy\n",
+    "\n",
+    "`Proxy` is a built-in type that lets you redefine __fundamental operations__ on an object that you can't usually change.  It has certain built-in __traps__ for operations that are supported.\n",
+    "\n",
+    "```JavaScript\n",
+    "// object that is the target of the proxy (original object)\n",
+    "const target = {x: 10, y: 100};\n",
+    "// specify the traps in a handler object\n",
+    "// (any trap not specified just does the default behavior)\n",
+    "const handler = {\n",
+    "    // trap property retrieval (. or [] operators)\n",
+    "    get(target, prop, receiver) {\n",
+    "        // target = the object to the left of . or []\n",
+    "        // prop = the property name\n",
+    "        // receiver = usually the proxy itself\n",
+    "        \n",
+    "        // return the value you want to retrieve (can often ommit from args list)\n",
+    "        return \"hi - \" + String(target[prop]);\n",
+    "    }\n",
+    "};\n",
+    "// Create the proxy itself\n",
+    "const proxy = new Proxy(handler, target);\n",
+    "\n",
+    "// Get properties\n",
+    "console.log(proxy.x); // hi - 10\n",
+    "console.log(proxy.y); // hi - 100\n",
+    "console.log(proxy.z); // hi - undefined\n",
+    "\n",
+    "// Pass the proxy to something expecting an object\n",
+    "f(proxy);\n",
+    "\n",
+    "```\n",
+    "\n",
+    "__HINT__: empty handler `{}` will just behave like the original object, and empty target `{}` will rely on the handler for all property retrieval since it has nothing.\n",
+    "\n",
+    "Available __traps__ correspond to internal methods: for instance `get()` is a trap for `[[GET]]`.  These are the lowest-level primitive operations on an object that you usually can't even see or override.  The complete list is here: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Proxy#object_internal_methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f2a7590",
+   "metadata": {},
+   "source": [
+    "# Reflect\n",
+    "\n",
+    "__Static methods__ to probe an object with a similar style to how handlers work in `Proxy`. It may be better to use this within your `Proxy` handler instead of directly retrieving properties.\n",
+    "\n",
+    "eg. `Reflect.get(target, prop, receiver)`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ee4ebb",
+   "id": "26f8497b",
    "metadata": {},
    "outputs": [],
    "source": []
