Adding info from studying JavaScript # private members.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -5698,60 +5698,26 @@
    "id": "23b0e483",
    "metadata": {},
    "source": [
-    "# JS vs. TS Private Members\n",
+    "# JS vs. TS Private and Protected Members\n",
     "\n",
-    "NOTE: This cell doesn't run due to the ES version being too old to use `#` syntax.\n",
+    "`private`, `public`, and `protected` access modifiers are a TS __compiler feature__ - the emitted JS code contains no trace of these (no renaming either).\n",
     "\n",
-    "`private`, `public`, and `protected` access modifiers are a TS feature.\n",
+    "The newer `#` JS syntax Jfor private has nothing to do with TS `private`, and the convention of `_` has nothing to do with TS `protected`.\n",
     "\n",
-    "More recently, JavaScript itself added the `#` syntax to mark a member as __private__.\n",
-    "\n",
-    "You can also put `_` in front of an identifier to mark it as protected __by convention__ (not enforced)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "cbb22ad3",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "Line 4, Character 9\n        #y = 10;\n________^\nTS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.",
-     "output_type": "error",
-     "traceback": [
-      "Error: Line 4, Character 9",
-      "        #y = 10;",
-      "________^",
-      "TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.",
-      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
-      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
-      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
-      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
-      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
-      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
-      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
-      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
-      "    at Socket.emit (node:events:511:28)",
-      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
-     ]
-    }
-   ],
-   "source": [
-    "(() => {\n",
-    "    class MyClass {\n",
-    "        private x = 5;\n",
-    "        #y = 10;\n",
-    "        \n",
-    "        f() {\n",
-    "            console.log(this.x);\n",
-    "            console.log(this.#y);\n",
-    "        }\n",
-    "    }\n",
-    "    \n",
-    "    const m = new MyClass();\n",
-    "    m.f();\n",
-    "})();"
+    "__The main differences are:__\n",
+    "- different __syntax__\n",
+    "- runtime enforcement vs. compiler enforcement\n",
+    "  - in TS, the members just _become normal public members_ and are available to reflection\n",
+    "  \n",
+    "__The TypeScript team has these notes about future intentions:__\n",
+    "- the behavior of TS access modified will remain __as-is__\n",
+    "  - they will not do any renaming to leverage the JS versions\n",
+    "- trying to __combine__ the JS and TS versions will be an __error__\n",
+    "  - eg. `private #x` and `public #x` are both errors\n",
+    "- you cannot __assign__ from __constructor params__\n",
+    "- `readonly` can be combined with either style\n",
+    "- `private` or `#` members can both see each other from inside the class\n",
+    "- __structural typing__ requires the same matching `#` and `private` members (cannot ommit)"
    ]
   },
   {
