--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2482,9 +2482,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2e06ad1",
+   "metadata": {},
+   "source": [
+    "# 'delete' Operator\n",
+    "\n",
+    "This is like Python's `del` operator, but it __only works on object properties__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a06b5a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ x: 100, y: 200 } 100 200\n",
+      "400\n",
+      "\n",
+      "{ y: 200 } 200\n",
+      "undefined\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const m = {x: 100, y: 200};\n",
+    "    const s = 400;\n",
+    "    \n",
+    "    console.log(m, m.x, m.y);\n",
+    "    console.log(s);\n",
+    "    console.log();\n",
+    "    \n",
+    "    // delete s; // ILLEGAL\n",
+    "    delete m.x;\n",
+    "    console.log(m, m.y);\n",
+    "    console.log(m.x); // undefined now (not present)\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f73af44",
+   "metadata": {},
+   "source": [
+    "# 'in' Operator\n",
+    "\n",
+    "The `in` operator doesn't care about the value (even if `undefined`) - it only cares if the field is on the object by name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8a88ed8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "true\n",
+      "false\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const m = {x: 100, y: 200, z: undefined};\n",
+    "    \n",
+    "    console.log('x' in m);\n",
+    "    console.log('z' in m);\n",
+    "    console.log('missing' in m);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebef9fc3",
+   "id": "5a22d9c4",
    "metadata": {},
    "outputs": [],
    "source": []
