Adding realization about Proxy and metaclasses.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -1653,7 +1653,9 @@
     "\n",
     "__HINT__: empty handler `{}` will just behave like the original object, and empty target `{}` will rely on the handler for all property retrieval since it has nothing.\n",
     "\n",
-    "Available __traps__ correspond to internal methods: for instance `get()` is a trap for `[[GET]]`.  These are the lowest-level primitive operations on an object that you usually can't even see or override.  The complete list is here: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Proxy#object_internal_methods"
+    "Available __traps__ correspond to internal methods: for instance `get()` is a trap for `[[GET]]`.  These are the lowest-level primitive operations on an object that you usually can't even see or override.  The complete list is here: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Proxy#object_internal_methods\n",
+    "\n",
+    "This is similar to what can be accomplished with Python's __metaclasses__, though in a different way."
    ]
   },
   {
