Adding details of weird JS quirks after in-depth study.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -1155,7 +1155,7 @@
    "source": [
     "# Operator Overloading\n",
     "\n",
-    "**not supported**\n"
+    "Operating overloading is not supported in JavaScript or TypeScript, but you can simulate it to an extent by overriding how an object is coerced.  See https://github.com/davidpet/snippets/blob/main/javascript/Casting%20And%20Coercion.ipynb for details."
    ]
   },
   {
