--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -949,7 +949,9 @@
    "id": "955d9878",
    "metadata": {},
    "source": [
-    "# map(), reduce(), and filter()\n"
+    "# map(), reduce(), and filter()\n",
+    "\n",
+    "__WARNING__: all of the callbacks passed into these can take additional __index__ and __array__ args at the end of their lists.  You can usually ignore these if you don't need them.  However, there is a famous example of that causing an issue: `[1, 2, 3].map(parseInt)` which returns `[1, NaN, NaN]` because the index gets passed into `parseInt` as the __radix__, messing up the parsing."
    ]
   },
   {
