--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -172,7 +172,9 @@
    "id": "987dcb3a",
    "metadata": {},
    "source": [
-    "# Conversions\n"
+    "# Conversions\n",
+    "\n",
+    "See https://github.com/davidpet/snippets/blob/main/javascript/Casting%20And%20Coercion.ipynb for more conversion details from the JS level."
    ]
   },
   {
