--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "fe842306",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +157,10 @@
     "  let isNaNTruthy: boolean = !!NaN;  // NaN is falsey\n",
     "  let isInfinityTruthy: boolean = !!Infinity; // Infinity is truthy\n",
     "\n",
+    "  // Comparisons\n",
+    "  // let isNanNan = NaN === NaN; // NaN is not equal to itself (by IEEE spec)\n",
+    "  // let isNanNan = NaN == NaN;  // same problem\n",
+    "    \n",
     "  return {\n",
     "    notANumber,\n",
     "    positiveInfinity,\n",
@@ -166,6 +170,7 @@
     "    isNegativeInfinity,\n",
     "    isNaNTruthy,\n",
     "    isInfinityTruthy,\n",
+    "    //isNanNan,  // TypeScript doesn't like this condition because always false\n",
     "  };\n",
     "})();\n"
    ]
@@ -577,7 +582,9 @@
    "id": "6e8548c6",
    "metadata": {},
    "source": [
-    "# Casting and Coercion\n"
+    "# Casting and Coercion\n",
+    "\n",
+    "There are deeper details about casting and coercion in terms ofthe  __JavaScript__ runtime in the __JavaScript snippets__: https://github.com/davidpet/snippets/blob/main/javascript/Casting%20And%20Coercion.ipynb"
    ]
   },
   {
@@ -2582,9 +2589,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef9cafea",
+   "metadata": {},
+   "source": [
+    "# eval() and Function()\n",
+    "\n",
+    "`eval()` and `Function()` are two ways to evaluate strings as code - both are highly discouarged (and possibly blocked by browser settings)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a22d9c4",
+   "id": "66a95339",
    "metadata": {},
    "outputs": [],
    "source": []
