Adding notes about chainable comparisons.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -550,6 +550,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9cba02db",
+   "metadata": {},
+   "source": [
+    "# Chainable Comparisons\n",
+    "\n",
+    "Python has a special syntax case for __comparison operators only__ where you can chain them together, and they will be used as follows:\n",
+    "\n",
+    "1. Each operand only evaluated once (despite the next steps)\n",
+    "1. Each operator called on the closest pair of operands (in order)\n",
+    "   - This is the part that differs from other languages - it won't see the boolean version!\n",
+    "1. All of the results `and`ed together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6214ca26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "called\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1 < 2 < 3) # True - in other languages this would be False\n",
+    "print((1 < 2) and (2 < 3)) # same thing\n",
+    "\n",
+    "def f():\n",
+    "    print('called')\n",
+    "    return 2\n",
+    "\n",
+    "print(1 < f() < 3) # f() only called once!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b5b86c72",
    "metadata": {},
    "source": [
